Bug 85133 - <animateTransform type="scale"> uses '1' as effective from value, if no base value is specified and from is not given
Summary: <animateTransform type="scale"> uses '1' as effective from value, if no base ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nikolas Zimmermann
URL:
Keywords:
Depends on: 85051
Blocks: 41761
  Show dependency treegraph
 
Reported: 2012-04-28 04:22 PDT by Nikolas Zimmermann
Modified: 2012-04-28 05:01 PDT (History)
1 user (show)

See Also:


Attachments
Patch (4.40 KB, patch)
2012-04-28 04:47 PDT, Nikolas Zimmermann
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Nikolas Zimmermann 2012-04-28 04:22:51 PDT
<animateTransform type="scale"> uses '1' as effective from value, if no base value is specified and from is not given.
It should start from '0'. I had that fixed before, but it got lost during merging.
Comment 1 Nikolas Zimmermann 2012-04-28 04:47:01 PDT
Created attachment 139356 [details]
Patch
Comment 2 Antti Koivisto 2012-04-28 04:57:02 PDT
Comment on attachment 139356 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=139356&action=review

> Source/WebCore/ChangeLog:3
> +        <animateTransform type="scale"> uses '1' as effective from value, if no base value is specified and from is not given

The bug title is confusing. It is not clear that using '1' is a wrong behavior or what the right one would be.
Comment 3 Nikolas Zimmermann 2012-04-28 05:01:10 PDT
Committed r115566: <http://trac.webkit.org/changeset/115566>