<animateTransform type="scale"> should use '0' as effective from value not '1', if no base value is specified and from is not given https://bugs.webkit.org/show_bug.cgi?id=85133

Source/WebCore:

It should start from scale=0. I had that fixed before, but it got lost during merging. Restore the fix.
See bug 85051, for more context why this is correct.

Tests: svg/animations/animateTransform-by-scale-1-expected.svg
       svg/animations/animateTransform-by-scale-1.svg

* svg/SVGAnimatedTransformList.cpp:
(WebCore::SVGAnimatedTransformListAnimator::calculateAnimatedValue):

LayoutTests:

Reviewed by Antti Koivisto.

* svg/animations/animateTransform-by-scale-1-expected.svg: Added.
* svg/animations/animateTransform-by-scale-1.svg: Added.

Canonical link: https://commits.webkit.org/102687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115566 268f45cc-cd09-0410-ab3c-d52691b4dbfc